--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "mongodb": "^2.2.25"
-  }
-  "engines" {
+  },
+  "engines": {
     "node": "7.8.0"
   }
 }
